[tool.poetry]
name = "valis"
version = "0.1.0"
description = "Network reachability verification engine"
authors = ["Lasse Leegaard <lasse@brandbil.dk>"]
license = "BSD Zero Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^23.2.1"
setuptools = "^68.0.0"
wheel = "^0.41.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
