[tool.poetry]
name = "valis"
version = "0.1.0"
description = "Network reachability verification engine"
authors = ["Lasse Leegaard <lasse@brandbil.dk>"]
license = "BSD Zero Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^24.0.0"
setuptools = "^70.0.0"
wheel = "^0.43.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.1.5"
pytest = "^7.4.0"
pytest-watcher = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
